# scalp

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  MES_Scalping_Roadmap.md  main.py  pyproject.toml
.claude/: settings.json  settings.local.json
config/: bot-config.yaml  loader.py
docs/: donchian_guide.md  prompt.md
notebooks/: phase1-commission-analysis.ipynb  phase2-hmm-validation.ipynb  phase2-intraday-profile.ipynb  phase2-regime-analysis.ipynb
prompts/: strategy_design.md
scripts/: analyze_hmm_regimes.py  analyze_intraday.py  analyze_regimes.py  backtest_iceberg.py  backtest_vwap_band.py  build_bars.py  build_dollar_bars.py  build_enriched_bars.py  build_l1_bars.py  build_l1_rth.py  build_rth_5s_bars.py  convert_l2_parquet.py  diagnose_cvd.py  diagnose_cvd2.py  diagnose_vpin.py  diagnose_vwap.py  diagnose_vwap_filters.py  download_l1.py  download_l2.py  fetch_tradovate_history.py  filter_l2_rth.py  generate_phase4_report.py  request_l2_batch.py  run_10yr_backtest.py  run_all_strategies.sh  run_combined_backtest.py  run_cpcv.py  run_dsr.py  run_pipeline.py  run_vwap_band_1m.py  run_vwap_l2.py  run_wfa.py  sweep_vwap_band.py  test_databento_feed.py  test_feed.py  test_orders.py  test_strategy_smoke.py  train_hmm.py  tune_cvd.py  tune_l1_filters.py  (+9 more)
sql/: create_mes_bars.sql
tests/: conftest.py  test_backtest_engine.py  test_bar_builder.py  test_bar_cache.py  test_bar_processor.py  test_bar_statistics.py  test_config_loader.py  test_cpcv.py  test_cvd_divergence.py  test_decision_engine.py  test_depth_monitor.py  test_dollar_bars.py  test_dsr.py  (+29 more)
(+328 files in other folders)
