[project]
name = "scalp"
version = "0.1.0"
description = "MES futures scalping bot"
requires-python = ">=3.11"
dependencies = [
    "polars",
    "pyarrow",
    "psycopg2-binary",
    "tqdm",
    "python-dotenv>=1.2.2",
    "numpy",
    "matplotlib",
    "seaborn",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.25",
    "pyyaml>=6.0",
    "statsmodels>=0.14.6",
    "scipy>=1.12",
    "hurst>=0.0.5",
    "databento>=0.72.0",
    "hmmlearn>=0.3",
    "joblib>=1.3",
    "aiohttp>=3.10",
    "tzdata>=2025.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "jupyter",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
